--- a/index.html
+++ b/index.html
@@ -10,5 +10,83 @@
 		<link rel="stylesheet" href="./src/style.css" />
 		<script src="main.js"></script>
 	</head>
-	<body></body>
-</html>tree
+	<body>
+		<!DOCTYPE html>
+		<html lang="en">
+			<head>
+				<meta charset="UTF-8" />
+				<meta
+					name="viewport"
+					content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+				/>
+				<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+				<title>Document</title>
+				<link rel="stylesheet" href="./src/css/normalize.css" />
+				<link rel="stylesheet" href="./src/css/styles.css" />
+			</head>
+			<body>
+				<div class="container">
+					<header class="header__wrapper">
+						<a href="" class="logo">
+							<img src="" alt="" class="logo__img" />
+						</a>
+						<nav class="menu">
+							<a href="" class="menu__item menu__item--active">item 1</a>
+							<a href="" class="menu__item">item 2</a>
+							<a href="" class="menu__item">item 3</a>
+							<a href="" class="menu__item">item 4</a>
+						</nav>
+					</header>
+
+					<main class="main__wrapper">
+						<article class="mainArticle">
+							<h1 class="mainArticle__hdl">Lorem ipsum dolor sit.</h1>
+							<p class="mainArticle__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum
+								in, laboriosam? Ad cumque dolores dolorum, eaque earum
+								exercitationem id molestias natus non officia perspiciatis
+								quaerat quas quasi, repellendus saepe tempora voluptates. Ab
+								accusamus accusantium ad aliquid aut eius iusto ratione rerum,
+								sit voluptatibus? Error explicabo id ipsum officia praesentium
+								voluptates.
+							</p>
+							<p class="mainArticle__text">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+								Blanditiis culpa, deserunt dicta dolor ducimus ea eius enim
+								eveniet ipsam itaque labore magnam perferendis perspiciatis
+								recusandae temporibus velit veritatis voluptates? Ad architecto
+								asperiores at beatae consequatur consequuntur corporis debitis,
+								dicta doloremque dolores doloribus dolorum eligendi est expedita
+								explicabo fuga harum iusto laborum maiores mollitia nihil
+								numquam odit, omnis porro praesentium quas qui ratione
+								recusandae rem reprehenderit suscipit velit voluptatem,
+								voluptatum! Ad dignissimos fugit hic minus quasi? Aliquid beatae
+								blanditiis illum veritatis?
+							</p>
+							<section class="mainArticle__related related">
+								<div class="related__item"></div>
+								<div class="related__item"></div>
+								<div class="related__item"></div>
+							</section>
+						</article>
+						<aside class="aside">
+							<div class="aside__item"></div>
+							<div class="aside__item"></div>
+							<div class="aside__item"></div>
+						</aside>
+					</main>
+
+					<footer class="footer__wrapper">
+						<nav class="secondaryMenu">
+							<a href="" class="secondaryMenu__item">item 1</a>
+							<a href="" class="secondaryMenu__item">item 1</a>
+							<a href="" class="secondaryMenu__item">item 1</a>
+							<a href="" class="secondaryMenu__item">item 1</a>
+						</nav>
+						<p class="copyright">&#169; 2024 Januszex</p>
+					</footer>
+				</div>
+			</body>
+		</html>
+	</body>
+</html>
